Fixed 10+ failing test cases.